# CoordCompressCodec

./: .gitignore  LICENSE  README.md  benchmark.py  build_universe.py  decode.py  encode.py  pyproject.toml  requirements.txt
docs/: benchmark_results.md  file_format.md  limitations.md  llm_training.md  mathematical_proof.md  method.md
examples/: log_records.py
examples/sample_texts/: access_log.txt
src/: __init__.py  benchmark.py  builder.py  codec.py  file_format.py  metrics.py  selector.py  tokenizer.py  universe.py
tests/: test_cli_smoke.py  test_file_format.py  test_roundtrip.py  test_universe.py
